# CSD2

CSD2A/: Aantekening_time_stamps.py  IBG_generation_try.py  aantekeningen les 4 python 24 sept.py  functie_oefening.py  single_sample_sequencer.py
CSD2A/Single_sample_sequencer/Doc/: README
CSD2B/: main
CSD2B/5_soundingSineInheritance/: CMakeLists.txt  customCallback.h  oscillator.cpp  oscillator.h  saw.cpp  saw.h  sine.cpp  sine.h  square.cpp  square.h
CSD2B/Hello_World/: main.cpp
CSD2B/Try_out1/: main  main.cpp
CSD2B/Try_out2/: CMakeLists.txt  Try_out2.cpp
CSD2B/synthSong/: Design.rtf  Pseudocode_v2.rtf  Pseudocode_v3.rtf  Voortgang.md  learningGoals.rtf
CSD2B/synthSong/Design.rtfd/: TXT.rtf
CSD2C/singleGestureMulti-effect/: learningGoals.md  overallDesign.md
python_basics/: Irregular Beat Generator print version.py  Irregular Beat Generator.py  Ritmische_playback.py  event_based_sequencer.py  helloworld.py  playsound.py  single_sample_sequencer.py
python_basics/Eindopdracht_2A/: Irregular Beat Generator.py
python_basics/ciskavriezenga CSD_24-25 main blok2a-assignment_3/sample_player/: 01_playASound.py
python_basics/ciskavriezenga_CSD_24-25_main_blok2a-assignment_3/sample_player/: 02_timedPlayback.py  03_randomTime.py  04_randomNoteDuration.py  05_oneSampleSequenceSteps.py  06_oneSampleSequenceTime.py  06_oneSampleSequenceTime_BETER.py
